--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.20"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+black = "=19.3b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
